===================
(c) 2004 the aKregator authors.

Changes after 1.0b7:
-----------------------------

New features:
#85532 - Add feed summary -tpr

Changes:
       - Do not allow user to stop feedlist loading to avoid data loss -tpr
       - Do not show feedlist url in title -tpr
       - Clear the statusbar when pressing Stop button -tpr
       - make search bar optional -fo

Bug fixes:
       - Make kontact plugin work with Kontact from CVS HEAD -fo
       - Don't load kontact plugin when akregator is already running -fo
       - Fix expiry by age (global setting was ignored) -fo      
       - Make trayicon and configure dialog available in kontact -fo
       - Save and restore open/closed state of feed groups -fo
       - Fix interval fetching (Exclude feeds with custom settings from global fetch) -fo
#84528 - Make session management to save and load feedlist when appropriate -tpr
#88437 - Show credits on Kontact's about dialog -tpr


Changes after 1.0b6:
-----------------------------
New features:

Changes:

#84133,
#85691 - added KMail-like key bindings -fo
       - Advanced archive options: Limit article number, disable archive -fo
       - Add "Fetch All Feeds" into context menu of trayicon -tpr
       - Show position of the tray icon with image in dialog when pressing the close button -tpr
       - Display proper error message when no feed found in add feed -tpr
       - make systray icon optional (Patch by Christof Musik,
       christof(at)freenet.de) -fo
       - added "Export Feeds" function to export the standard feed list -fo
       - Expiry support added -fo 
      
Bug fixes:
#85409 - Resolve entities in feed titles -fo
#90671 - Shutdown properly hopefully fixes #89172 too -tpr
       - Update combined view after fetching new articles (doesn't work in group view yet)         
Changes after 1.0b5:
-----------------------------
Changes:
       - Improved dupe detection, using md5 now -ph